# Malicious_Code_Conceal

./: .project  LICENSE  README.md
0_payload/programme/: makefile  payload.c
0_payload/script/: get_cpu_usage.ps1  get_cpu_usage1.ps1  load.bat
0_statistic/: README.md  calc_subsec_and_sort.py  occurrence_result.txt  statistic.sh  statistic_occurrence.py
1_splash2-master/: Makefile.config
1_windows_bull_moose_blackscholes_4/programme/: blackscholes.c  programme.cbp
1_windows_bull_moose_blackscholes_4/script/: run.bat
1_windows_bull_moose_blackscholes_4_null/programme/: bull_moose_blackscholes.cbp
1_windows_bull_moose_blackscholes_4_null/script/: run.bat
1_windows_load.pthread/: statistic.7z
1_windows_load.pthread/programme/: thread_windows.c
1_windows_load.pthread/script/: run_payload.bat  statistic.sh
1_windows_load.pthread/statistic/: result.txt  sequence_load_0_loop_10000.log.1-2-3-4  sequence_load_0_loop_30000.log.1-2-3-4  sequence_load_0_loop_60000.log.1-2-3-4  sequence_load_0_loop_90000.log.1-2-3-4  sequence_load_1_loop_10000.log.1-2-3-4  sequence_load_1_loop_30000.log.1-2-3-4  sequence_load_1_loop_60000.log.1-2-3-4  sequence_load_1_loop_90000.log.1-2-3-4  sequence_load_2_loop_10000.log.1-2-3-4  sequence_load_2_loop_30000.log.1-2-3-4  sequence_load_2_loop_60000.log.1-2-3-4  sequence_load_2_loop_90000.log.1-2-3-4  sequence_load_3_loop_10000.log.1-2-3-4  sequence_load_3_loop_30000.log.1-2-3-4  sequence_load_3_loop_60000.log.1-2-3-4  sequence_load_3_loop_90000.log.1-2-3-4  sequence_load_4_loop_10000.log.1-2-3-4  sequence_load_4_loop_30000.log.1-2-3-4  sequence_load_4_loop_60000.log.1-2-3-4  sequence_load_4_loop_90000.log.1-2-3-4
1_windows_load/programme/: thread_windows.depend  thread_windows.layout
1_windows_load/script/: run_payload.bat
1_windows_loop.pthread/: statistic_high_load.7z  statistic_low_load.7z
1_windows_loop.pthread/programme/: makefile  thread_windows.c
1_windows_loop.pthread/script/: run_loop.bat  run_loop_20ms.bat  statistic.sh
1_windows_loop.pthread/statistic/: result.txt
1_windows_loop/programme/: thread_windows.cbp  thread_windows.cpp  thread_windows.layout
1_windows_loop/script/: run_loop.bat  run_loop_10000000.bat  run_loop_20ms_new.bat
1_windows_sleep/programme/: thread_windows.cpp  thread_windows.depend  thread_windows.layout
1_windows_sleep/script/: run_sleep.bat
1_windows_sleep_after/programme/: thread_windows.cbp  thread_windows.cpp  thread_windows.depend  thread_windows.layout
1_windows_thread_point/programme/: thread_windows.cpp  thread_windows.layout
1_windows_thread_point/script/: run_tm.bat  tm_complementary.bat
2_0_bullmoose/: BullMoose_8.c
2_Hunatcha/: 4_pthread_NoOutPut.c  Hunatcha.c
2_Hunatchab/: 4_pthread_NoOutPut.c
2_base/2_bullmoose/: BullMoose_12.c  BullMoose_4.c
2_branko/: Branko.c
2_bullmoose/: BullMoose_4.cpp  BullMoose_4_pthread.NoOutPut.c  BullMoose_8.c  bullmoose_2_pthread.c  bullmoose_2_pthread.h  makefile.bat
3_2_multi_programmes/: modify_makefile.py  run.1.bat  run.3.bat  run.bat
3_2_multi_programmes/fft/: Makefile  fft.c  run.bat
3_2_multi_programmes_1/script/: do.sh  makefile  modify_makefile.py  run.bat  run_all.1.bat  run_all.bat  statistic.sh  thread_windows.c
3_2_multi_programmes_detect/: README.md
3_2_multi_programmes_probability/: readme.md
3_2_multi_programmes_windows/: modify_makefile.py  run.3.bat  run.bat
5_remot/: New Text Document.txt  data.txt  get_cpu_usage1.ps1  log.txt  payload.c  remote.bat  remote.xlsx  run.bat  run_all.bat  sleep.vbs  新建文本文档.txt
all-benchmark/: README.md  do.sh
bull_moose_blackscholes_1/: bull_moose_blackscholes.depend
bull_moose_blackscholes_2/: blackscholes.c  bull_moose_blackscholes.cbp  bull_moose_blackscholes.depend  bull_moose_blackscholes.layout  bullmoose.c
bull_moose_blackscholes_4/: programme.layout
bull_moose_blackscholes_8_null/: blackscholes.c  bull_moose_blackscholes.layout  bullmoose.c  bullmoose.cpp
bull_moose_blackscholes_not_solit/: blackscholes.c  bull_moose_blackscholes.layout
bullmoose/: BullMoose.c  BullMoose_12.h  BullMoose_4.c  BullMoose_4.cpp  BullMoose_8.c  BullMoose_8.cpp  BullNoose_1.c  BullNoose_2.c  readme.txt
mailcious code/useful/c_linux/brundle/: Makefile.am  config.h.in  configure.in
mailcious code/useful/c_linux/brundle/src/: Makefile.am  Makefile.in  brundle-fly-proto.c  cnthosts  elf2bin.c  elfio.c  elfio.h  elfstat.c  host.c  syscalls.h
splash2-master/: Makefile (another copy).config  Makefile (copy).config  Makefile.config
(+1175 files in other folders)
