#
# Brundle Fly - Good-natured Linux ELF virus supporting kernel 2.2 and 2.4
# Copyright 2001 Konrad Rieck <kr@roqe.org>, Konrad Kretschmer <kk@roqe.org>
# In memory to Seth Brundle 
#
# $Id: Makefile.am,v 1.5 2001/07/11 10:14:10 kr Exp $
#

AUTOMAKE_OPTIONS = foreign
SUBDIRS = src
EXTRA_DIST = README 





